fixed a little bug that was in the css

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<img src="./assets/img/home-img-PNG" alt="" class="home__img">
 
 			<div class="home__data">
-				<h1 class="home__title">Hi, Im Grim</h1>
+				<h1 class="home__title">Hi, Im Isaiah</h1>
 				<h3 class="home__subtitle">Developer</h3>
 				<p class="home__description">Low Level Experience in web design and development knowledge,
 				but I will always try producing quality work.</p>
@@ -128,19 +128,26 @@
 				<p class="about__description">Developer, with little knowledge and years of experience,
 				work mainly with Javascript and I am currently working on improving on my Ui / Ux Designs.</p>
 				<div class="about__info grid">
-					<div class="about__box">
+					<div class="about__box" id="project-box-1">
 							<i class="uil uil-award about__icon"></i>
 							<h3 class="about__title">Experience</h3>
 							<span class="about__subititle">2 + Years</span>
 					</div>
 
-					<div class="about__box">
+					<div class="about__box" id="project-box-2">
 						<i class="uil uil-award-alt about__icon"></i>
 						<h3 class="about__title">Completed</h3>
-						<span class="about__subititle">48 + Projects</span>
+						<span class="about__subititle">2 + Projects</span>
 					</div>
 
-					<div class="about__box">
+					<div id='projects' class="projects-container">
+						<div class="project-item" data-url="project1.html">Product Landing Page</div>
+						<div class="project-item" data-url="project2.html">Stat Calculator</div>
+						<div class="project-item" data-url="project3.html">Password Generator</div>
+						
+					</div>
+
+					<div class="about__box" id="project-box-3">
 					<i class="uil uil-headphones-alt about__icon"></i>
 					<h3 class="about__title">Support</h3>
 					<span class="about__subititle">Online 7/11</span>
